// spacing issue

--- a/assets/less/classes/forum/status.less
+++ b/assets/less/classes/forum/status.less
@@ -14,6 +14,7 @@
         justify-content: center;
         align-items: center;
         font-size: 2em;
+        padding-bottom: 1px;
     }
 
     &__text {
